# MusicSheet

./: .gitignore  .gitmodules  CHECKLIST.md  DEVELOPMENT.md  PROJECT_STATUS.md  README.md  icon.py  index.html  package-lock.json  package.json  requirements.txt  vite.config.ts
examples/: AllaTurca.ly  For_Elise.ly  mary_had_a_little_lamb.ly  ode_to_joy.ly  test_ottava.ly  test_slur.ly  test_variables.ly  test_voices.ly  twinkle.ly  月亮代表我的心.ly  起风了.ly
scripts/: setup.bat  setup.sh
src/: App.css  App.tsx  styles-minimal.css  styles.css
src-tauri/: Cargo.toml  tauri.conf.json  test_parse.txt
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  lilypond.pest  lilypond_parser.rs  main.rs  transfer_file.rs
src/components/: AudioPlayer.tsx  ExportDropdown.css  ExportDropdown.tsx  MenuDropdown.css  MenuDropdown.tsx  MusicNotation.tsx  SettingsDialog.css  SettingsDialog.tsx
src/utils/: musicMaps.ts
