[package]
name = "music-sheet-reader"
version = "1.0.0"
description = "A cross-platform music sheet reader for LilyPond files"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-shell = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
regex = "1.0"
pest = "2.7"
pest_derive = "2.7"

[features]
# This feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[[bin]]
name = "music-sheet-reader"
path = "src/main.rs"

[lib]
name = "music_sheet_reader_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
